# masters-ray-casting

./: CMakeLists.txt  README.md  config.yaml  cornell_box.yaml
source/: aarect.cpp  aarect.h  box.cpp  box.h  camera.cpp  camera.h  color.h  hittable.h  main.cpp  sphere.cpp  sphere.h  utils.cpp  utils.h
